@@ -43,7 +43,7 @@ class attempt_submitted extends base {
      *
      * @return array
      */
-    public static function get_legacy_eventname() {
+    public static function my_get_legacy_eventname() {
         return 'submit';
     }
 
