@@ -43,7 +43,7 @@ class report_viewed extends base {
      *
      * @return array
      */
-    public static function get_legacy_eventname() {
+    public static function my_get_legacy_eventname() {
         return 'report';
     }
 
