@@ -59,7 +59,10 @@ class hotpot_user_filtering extends user_filtering {
             case 'grouping':
                 return new hotpot_filter_group($fieldname, $advanced, $default);
             case 'grade':
-                $label = get_string('grade');
+                // In Moodle >= 2.7, we use the "modgrade" string.
+                // In Moodle <= 2.6, we use simply "grade".
+                $modgrade = get_string_manager()->string_exists('modgrade', 'grades');
+                $label = get_string($modgrade ? 'modgrade' : 'grade', 'grades');
                 return new hotpot_filter_grade($fieldname, $label, $advanced, $default);
             case 'timemodified':
                 $label = get_string('time', 'quiz');
